# tech_assessment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  eval.sh  itinerary.json  promptfooconfig.yaml  pyproject.toml  report.md
data/: Alton-Street-Heritage-Precinct-Design-Guide-Aug2023.md  Amended-Urban-Environments-Bylaw-as-Approved-10-May-2022.md  Bylaw-210-Applications-Nov-2023.md  Bylaw-210-Speed-Limits-Bylaw-210-Maps-Schedule-A-17FEB2012-A517894.md  Cover-Letter-for-Amendments-31OCT2013.md  Dear-Cottages-Heritage-Precinct-Design-Guide-Aug23.md  Dog-Control-Bylaw-Number-221-FINAL-Signed-and-Sealed-25Jun2020.md  Elliott-Street-Heritage-Precinct-Design-Guide-Aug2023.md  FAQ-Subdivisions-RMAPlanning-nov14.md  Fountain-Place-Heritage-Precinct-Design-Guide-Aug023.md  Freedom-Camping-Bylaw-2017-Signed-and-Sealed-12Oct2017.md  Frequently-Asked-Questions-Industrial-Zone-RMA-Planning.md  Frequently-Asked-Questions-Inner-City-Zone-RMA-Planning.md  Frequently-Asked-Questions-Residential-Zone-RMA-Planning.md  Frequently-Asked-Questions-Rural-Zone-RMA-Planning.md  Frequently-Asked-Questions-Sub-Commercial-Zone-RMA-Planning.md  Harbourmasters-Direction-Dec-22.md  IHL-Statement-of-Expectations-2023-24-23Dec2022.md  Infrastructure-Holdings-Ltd-including-Nelson-Airport-and-Port-Nelson-Statement-of-Intent-2023-2026.md  NCC-Nelson-City-Events-Strategy-May18-updated-December-2022.md  NRMP-Amendments-31Aug2015-Amended-pages-Vol-1-3.compressed.md  NRMP-Amendments-Filing-Instructions-31Aug2015.md  NRMP-Filing-instructions-for-Plan-Updates-1-December-2014-Letter-to-subscribers-December-2014.md  NRMP-July-2021-amendments-Cover-letter-and-Filing-Instructions-July-2021-A2509507.md  NRMP-July-2021-collated-amendments-ALL-Vol-1-3.md  NRMP-NES-PF-Amendments-Cover-Letter-and-Filing-Instructions-Jan-2019.md  NRMP-Plan-Changes-Collated-amendments-Plan-Change-16-PC16-1-December-2014.md  Navigation-Safety-Bylaw-effective-25JUN2020-A2415830-PDF-version.md  Nelmac-Kumanu-Statement-of-Intent-2023-24_Rev-10-03Jul2023.md  Nelmac-Statement-of-Expectations-for-2023-2024-22Dec2022.md  Nelson-City-Council-Traffic-and-Parking-Bylaw-2023.md  Nelson-Regional-Development-Agency-Statement-of-Intent-2021-24-Updated-June-2023.md  Nelson-School-of-Music-Trust-SOI-Jan-2023-Dec-2025.md  Nelson-Tasman-Land-Development-Manual-LDM-7April2022.md  Protected-Trees-Frequently-Asked-Questions-RMA-Planning.md  RADn1438922v1PC14MinorErrorAmendmentsCoverLetter07JAN2013.md  Richmond-Avenue-Heritage-Precinct-Design-Guide-Aug2023.md  (+11 more)
docs/: Tech_Questions_AI_1.md
(+30 files in other folders)
